@@ -1,5 +1,6 @@
 0.03
  - Add support for '+10' syntax of number to check_number().
+ - Add support for floating numbers to check_number().
 
 0.02 2020-12-11T12:32:57+01:00
  - Fix SYNOPSIS section in doc.
